Improve code [implement JDK17 features]